--- a/.env.development
+++ b/.env.development
@@ -7,6 +7,7 @@ NEXT_PUBLIC_USE_EMULATOR=false
 # Firebase
 NEXT_PUBLIC_API_KEY=AIzaSyC49-Anu7eCG54Ig-KIXsIwVRmNRSaXgwI
 NEXT_PUBLIC_AUTH_DOMAIN=twitterzz.firebaseapp.com
+NEXT_PUBLIC_DATABASE_URL=https://twitterzz-default-rtdb.asia-southeast1.firebasedatabase.app
 NEXT_PUBLIC_PROJECT_ID=twitterzz
 NEXT_PUBLIC_STORAGE_BUCKET=twitterzz.appspot.com
 NEXT_PUBLIC_MESSAGING_SENDER_ID=175103274168
