--- a/.env.development
+++ b/.env.development
@@ -14,5 +14,6 @@ NEXT_PUBLIC_MESSAGING_SENDER_ID=175103274168
 NEXT_PUBLIC_APP_ID=1:175103274168:web:1dfcee52a28b8e99d5584d
 NEXT_PUBLIC_MEASUREMENT_ID=G-5J2N6HK34J
 
-# Twitter 
+# Twitter
+TWITTER_API_KEY=c1EWluxQV4eK6t7PFThKoxLOw
 TWITTER_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAMukuQEAAAAAi5zcEmKHUUznBbU%2BXu%2FoRXIsVRQ%3DF3AycbErwboQBKee9TWlpfzZIx0USYUUWkS53D1XNJgMXwYu9Q
