--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@capacitor/android": "^6.1.1",
+    "@capacitor/cli": "^6.1.1",
+    "@capacitor/core": "^6.1.1",
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.11",
     "clsx": "^1.2.1",
